[package]
name = "agent-ai-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.13.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
quick-xml = { version = "0.37.5", features = ["serialize"] }
thiserror = "2.0.12"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
